[workspace.package]
homepage = "https://wiki.gear-tech.io/docs/examples/prerequisites"
authors = ["Sushmit <sushmitsarmah@gmail.com>"]
version = "0.1.0"
license = "MIT"
edition = "2021"
publish = false

[package]
name = "pebbles-game"
version.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd.workspace = true
gmeta.workspace = true
pebbles-game-io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
pebbles-game-io.workspace = true

[dev-dependencies]
gtest.workspace = true
pebbles-game-io.workspace = true

[workspace]
members = ["io"]

[workspace.dependencies]
gstd = "1.3.0"
gmeta = "1.3.0"
gtest = "1.3.0"
gear-wasm-builder = "1.3.0"
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
pebbles-game-io.path = "io"

